# benchmarks

./: .gitignore  .gitmodules  CONTRIBUTORS.md  LICENSE  README.md
.github/workflows/: sphinx.yml
dgemm/src/: mt-dgemm.c
doc/sphinx/: README.md  build_doc.py  conf.py  index.rst
kokkos_lammps_hippynn/: .gitignore  Benchmark-Plotting.py  MD-HO-cpu.in  MD-HO.in  RunLammps-2node.bash  Run_GPU_Throughput.bash  Run_Strong_CPU.bash  Run_Strong_Single.bash  Run_Throughput_GPU.bash  Run_Weak_Parallel.bash  TEST_AG_MODEL.pt  ag_box.data  benchmark-env.yml  exports.bash  submit_all_benchmarks.bash  train_model.py
map_cpu/: map_cpu.c
microbenchmarks/dgemm/: README.ACES
microbenchmarks/dgemm/src/: CMakeLists.txt  Makefile  Makefile.intel  mt-dgemm.c
microbenchmarks/dgemm/src/build_config/: CRAY.gm  GCC.gm  INTEL.gm  INTEL_ONEAPI.gm
microbenchmarks/ior/: Makefile.in  README.XROADS.md  Xrds_acceptance_script.sh  configure
microbenchmarks/mdtest/: Makefile  Makefile.XROADS  README.XROADS  README.XROADS.md  RELEASE_LOG.md  mdtest.c  (+1 more)
microbenchmarks/osumb/: CHANGES  COPYRIGHT  Makefile.am  Makefile.in  README  ats5_bm.sh  configure  configure.ac  map_rank_to_gpu
microbenchmarks/osumb/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
microbenchmarks/osumb/c/: Makefile.am  Makefile.in  get_local_rank
microbenchmarks/osumb/c/mpi/: Makefile.in
microbenchmarks/osumb/c/mpi/collective/: Makefile.am  Makefile.in
microbenchmarks/osumb/c/mpi/collective/blocking/: Makefile.am  Makefile.in  osu_allgather.c  osu_allgatherv.c  osu_allreduce.c  osu_alltoall.c  osu_alltoallv.c  osu_alltoallw.c  osu_barrier.c  osu_bcast.c  osu_gather.c  osu_gatherv.c  osu_reduce.c  osu_reduce_scatter.c  osu_scatter.c  osu_scatterv.c
microbenchmarks/osumb/c/mpi/collective/neighborhood/: Makefile.am  Makefile.in  osu_ineighbor_allgather.c  osu_ineighbor_allgatherv.c  osu_ineighbor_alltoall.c  osu_ineighbor_alltoallv.c  osu_ineighbor_alltoallw.c  osu_neighbor_allgather.c  osu_neighbor_allgatherv.c  osu_neighbor_alltoall.c  osu_neighbor_alltoallv.c  osu_neighbor_alltoallw.c
microbenchmarks/osumb/c/mpi/collective/non_blocking/: Makefile.am  Makefile.in  osu_iallgather.c  osu_iallgatherv.c  osu_iallreduce.c  osu_ialltoall.c  osu_ialltoallv.c  osu_ialltoallw.c  osu_ibarrier.c  osu_ibcast.c  osu_igather.c  osu_igatherv.c  osu_ireduce.c  osu_ireduce_scatter.c  osu_iscatter.c  osu_iscatterv.c
microbenchmarks/osumb/c/mpi/one-sided/: Makefile.am  Makefile.in  osu_acc_latency.c  osu_cas_latency.c  osu_fop_latency.c  osu_get_acc_latency.c  osu_get_bw.c  osu_get_latency.c  osu_put_bibw.c  osu_put_bw.c  osu_put_latency.c
microbenchmarks/osumb/c/mpi/pt2pt/: Makefile.am  Makefile.in
microbenchmarks/osumb/c/mpi/pt2pt/persistent/: Makefile.am  Makefile.in  osu_bibw_persistent.c  osu_bw_persistent.c  osu_latency_persistent.c
microbenchmarks/osumb/c/mpi/pt2pt/standard/: Makefile.am  Makefile.in  osu_bibw.c  osu_bw.c  osu_latency.c  osu_latency_mp.c  osu_latency_mt.c  osu_mbw_mr.c  osu_multi_lat.c
microbenchmarks/osumb/c/mpi/startup/: Makefile.am  Makefile.in  osu_hello.c  osu_init.c
microbenchmarks/osumb/c/nccl/: Makefile.am  Makefile.in
microbenchmarks/osumb/c/nccl/collective/: Makefile.am  Makefile.in  osu_nccl_allgather.c  osu_nccl_allreduce.c  osu_nccl_alltoall.c  osu_nccl_bcast.c  osu_nccl_reduce.c  osu_nccl_reduce_scatter.c
microbenchmarks/osumb/c/nccl/pt2pt/: Makefile.am  Makefile.in  osu_nccl_bibw.c  osu_nccl_bw.c  osu_nccl_latency.c
microbenchmarks/osumb/c/openshmem/: Makefile.am  Makefile.in  osu_oshm_atomics.c  osu_oshm_barrier.c  osu_oshm_broadcast.c  osu_oshm_collect.c  osu_oshm_fcollect.c  osu_oshm_get.c  osu_oshm_get_mr_nb.c  osu_oshm_get_nb.c  osu_oshm_put.c  osu_oshm_put_mr.c  osu_oshm_put_mr_nb.c  osu_oshm_put_nb.c  osu_oshm_put_overlap.c  osu_oshm_reduce.c
microbenchmarks/osumb/c/upc/: Makefile.am  Makefile.in  osu_upc_all_barrier.c  osu_upc_all_broadcast.c  osu_upc_all_exchange.c  osu_upc_all_gather.c  osu_upc_all_gather_all.c  osu_upc_all_reduce.c  osu_upc_all_scatter.c  osu_upc_memget.c  osu_upc_memput.c
microbenchmarks/osumb/c/upcxx/: Makefile.am  Makefile.in  osu_upcxx_allgather.cpp  osu_upcxx_alltoall.cpp  osu_upcxx_async_copy_get.cpp  osu_upcxx_async_copy_put.cpp  osu_upcxx_bcast.cpp  osu_upcxx_gather.cpp  osu_upcxx_reduce.cpp  osu_upcxx_scatter.cpp
microbenchmarks/osumb/c/util/: ddt_sample.txt  kernel.cu  nhbrhd_graph.adj  osu_util.c  osu_util.h  osu_util_graph.c  osu_util_graph.h  osu_util_mpi.c  osu_util_mpi.h  osu_util_nccl.c  osu_util_nccl.h  osu_util_options.h  osu_util_papi.c  osu_util_papi.h  osu_util_pgas.c  osu_util_pgas.h  osu_util_validation.c
microbenchmarks/osumb/java/: README
microbenchmarks/osumb/java/mpi/collective/: OSUAllReduce.java  OSUAllgather.java  OSUAllgatherv.java  OSUAlltoall.java  OSUAlltoallv.java  OSUBarrier.java  OSUBcast.java  OSUGather.java  OSUGatherv.java  OSUReduce.java  OSUReduceScatter.java  OSUScatter.java  OSUScatterv.java
microbenchmarks/osumb/java/mpi/common/: BenchmarkUtils.java
microbenchmarks/osumb/java/mpi/pt2pt/: OSUBandwidth.java  OSUBandwidthOMPI.java  OSUBiBandwidth.java  OSUBiBandwidthOMPI.java  OSULatency.java
microbenchmarks/osumb/java/mpi/startup/: HelloWorld.java  OMPIHelloWorld.java
microbenchmarks/osumb/python/: Makefile.am  README  run.py
microbenchmarks/osumb/python/mpi/collective/: Makefile.am  osu_allgather.py  osu_allgatherv.py  osu_allreduce.py  osu_alltoall.py  osu_alltoallv.py  osu_barrier.py  osu_bcast.py  osu_gather.py  osu_gatherv.py  osu_reduce.py  osu_reduce_scatter.py  osu_scatter.py  osu_scatterv.py
microbenchmarks/osumb/python/mpi/pt2pt/: Makefile.am  osu_bibw.py  osu_bw.py  osu_latency.py  osu_multi_lat.py
microbenchmarks/osumb/python/util/: Makefile.am  options.py  osu_util_mpi.py  parser.py
miniem_build/: build-ascicgpu030.sh  build-crossroads.sh  spack-fixes-v0.21.0.patch  template.yaml
utils/: README.md  memory_capture  memory_plot  parse_branson_top.py  parse_spatter_top.py  pav_activate.sh  pavparse  pavplot  pavplot.py  read_lanl_amg.py  read_lanl_vibe.py
(+2588 files in other folders)
